--- a/Western/Lazy Saloon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Western/Lazy Saloon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -355,7 +355,7 @@ StaticMesh.StaticMeshMaterials=True
 StaticMesh.LODCustomMode=False
 StaticMesh.LOD0=False
 StaticMesh.LodSettings=False
-StaticMesh.StaticMesh=False
+StaticMesh.StaticMesh=True
 StaticMesh.Collision=False
 StaticMesh.ImportSettings=False
 StaticMesh.Navigation=False
@@ -1029,28 +1029,65 @@ CameraActor.Replication=True
 CameraActor.Actor=True
 FirstPersonCharacter_C.SkeletalMesh=False
 MaterialExpressionNormalize.MaterialExpression=True
+LevelSequenceMasterSequenceSettings.MasterSequence=True
+MatineeActor.TransformCommon=True
+MatineeActor.MatineeActor=False
+MatineeActor.Play=False
+MatineeActor.Rewind=True
+MatineeActor.Cinematic=True
+MatineeActor.Rendering=True
+MatineeActor.Replication=True
+MatineeActor.Actor=True
+LevelSequenceActor.TransformCommon=True
+LevelSequenceActor.General=True
+LevelSequenceActor.Playback=True
+LevelSequenceActor.Cinematic=True
+LevelSequenceActor.BurnInOptions=True
+LevelSequenceActor.Aspect Ratio=True
+LevelSequenceActor.BindingOverrides=True
+LevelSequenceActor.Replication=True
+LevelSequenceActor.InstanceData=True
+LevelSequenceActor.Collision=True
+LevelSequenceActor.Actor=True
+CineCameraActor.TransformCommon=True
+CineCameraActor.Current Camera Settings=True
+CineCameraActor.CameraOptions=True
+CineCameraActor.CameraSettings=True
+CineCameraActor.Camera=True
+CineCameraActor.PostProcess=True
+CineCameraActor.Tags=True
+CineCameraActor.Activation=True
+CineCameraActor.Collision=True
+CineCameraActor.Cooking=True
+CineCameraActor.Replication=True
+CineCameraActor.Actor=True
+WesternMap_C.Tick=True
+WesternMap_C.Replication=True
+WesternMap_C.Input=True
+WesternMap_C.Actor=True
+K2Node_VariableGet.Events=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Lazy_Saloon/Models/Furniture/Materials/Light_Metal_BaseColor
-MRUItem1=/Game/Lazy_Saloon/Models/Furniture/Materials/Light_Metal_Roughness
-MRUItem2=/Game/Lazy_Saloon/Models/Furniture/Materials/Light_Base
-MRUItem3=/Game/Lazy_Saloon/Models/Furniture/Materials/Light_Inst
-MRUItem4=/Game/Lazy_Saloon/Models/Furniture/Barrel01
-MRUItem5=/Game/Lazy_Saloon/Models/Furniture/Materials/Light
-MRUItem6=/Game/Lazy_Saloon/Models/Furniture/Light
-MRUItem7=/Game/Lazy_Saloon/Models/Furniture/Materials/Textures/Saloon-Bench_Bench_BaseColor
-MRUItem8=/Game/Lazy_Saloon/Models/Furniture/Materials/Textures/Saloon-Bench_Bench_Roughness
-MRUItem9=/Game/Lazy_Saloon/Models/Furniture/Materials/Textures/Saloon-Bench_Bench_Height
-MRUItem10=/Game/Lazy_Saloon/Models/Furniture/Materials/Textures/Saloon-BarBase_Wood_Roughness
-MRUItem11=/Game/Lazy_Saloon/Models/Furniture/Materials/Textures/Saloon-BarBase_Wood_Height
-MRUItem12=/Game/Lazy_Saloon/Models/Structure/Textures/Textures/Saloon-Stairs_Stairs_Roughness
-MRUItem13=/Game/Lazy_Saloon/Models/Structure/Textures/Textures/Saloon-Stairs_Stairs_Height
-MRUItem14=/Game/Lazy_Saloon/Models/Structure/Textures/Saloon-Rails_Wood_BaseColor
-MRUItem15=/Game/Lazy_Saloon/Models/Structure/Textures/Railing
-MRUItem16=/Game/Lazy_Saloon/Models/Structure/Saloon-Rails
-MRUItem17=/Game/Lazy_Saloon/Audio/Music/Rainy_Night_Montague_Cue
-MRUItem18=/Game/Lazy_Saloon/Audio/Music/Rainy_Night_Montague
-MRUItem19=/Game/Lazy_Saloon/Audio/Music/Background_Music
+MRUItem0=/Game/Lazy_Saloon/Models/Furniture/Books02
+MRUItem1=/Game/Lazy_Saloon/Models/Furniture/Plush_Yeen_2_0_Base_Fluff_BaseColor
+MRUItem2=/Game/Lazy_Saloon/Models/Furniture/Plush_Yeen_2_0_Base_Fluff_Height
+MRUItem3=/Game/Lazy_Saloon/Models/Furniture/Plush_Yeen_Mat
+MRUItem4=/Game/Lazy_Saloon/Models/Furniture/Plush_Yeen_2_0
+MRUItem5=/Game/FlyCam
+MRUItem6=/Game/Cinematics/Sequences/Sequence/SequenceMaster
+MRUItem7=/Game/Lazy_Saloon/Models/Furniture/Materials/Light_Metal_BaseColor
+MRUItem8=/Game/Lazy_Saloon/Models/Furniture/Materials/Light_Metal_Roughness
+MRUItem9=/Game/Lazy_Saloon/Models/Furniture/Materials/Light_Base
+MRUItem10=/Game/Lazy_Saloon/Models/Furniture/Materials/Light_Inst
+MRUItem11=/Game/Lazy_Saloon/Models/Furniture/Barrel01
+MRUItem12=/Game/Lazy_Saloon/Models/Furniture/Materials/Light
+MRUItem13=/Game/Lazy_Saloon/Models/Furniture/Light
+MRUItem14=/Game/Lazy_Saloon/Models/Furniture/Materials/Textures/Saloon-Bench_Bench_BaseColor
+MRUItem15=/Game/Lazy_Saloon/Models/Furniture/Materials/Textures/Saloon-Bench_Bench_Roughness
+MRUItem16=/Game/Lazy_Saloon/Models/Furniture/Materials/Textures/Saloon-Bench_Bench_Height
+MRUItem17=/Game/Lazy_Saloon/Models/Furniture/Materials/Textures/Saloon-BarBase_Wood_Roughness
+MRUItem18=/Game/Lazy_Saloon/Models/Furniture/Materials/Textures/Saloon-BarBase_Wood_Height
+MRUItem19=/Game/Lazy_Saloon/Models/Structure/Textures/Textures/Saloon-Stairs_Stairs_Roughness
 
 [AssetEditorToolkitTabLocation]
 /Game/Lazy_Saloon/Misc/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -1248,11 +1285,18 @@ MRUItem19=/Game/Lazy_Saloon/Audio/Music/Background_Music
 /Game/Lazy_Saloon/Models/Furniture/Materials/Textures/Saloon-Bench_Bench_Roughness.Saloon-Bench_Bench_Roughness=1
 /Game/Lazy_Saloon/Models/Furniture/Materials/Textures/Saloon-Bench_Bench_Height.Saloon-Bench_Bench_Height=1
 /Game/Lazy_Saloon/Models/Furniture/Materials/Textures/Saloon-Bench_Bench_BaseColor.Saloon-Bench_Bench_BaseColor=1
+/Game/Lazy_Saloon/WesternMap.WesternMap:PersistentLevel.WesternMap=1
+/Game/Lazy_Saloon/Models/Furniture/Plush_Yeen_2_0.Plush_Yeen_2_0=1
+/Game/Lazy_Saloon/Models/Furniture/Plush_Yeen_Mat.Plush_Yeen_Mat=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Plush_Yeen_2_0.Plush_Yeen_2_0;
+RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Hyena_Plush.Hyena_Plush;
+RecentlyPlaced=/Script/Engine.MatineeActor;/Engine/Transient.ActorFactoryMatineeActor_0
+RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
 RecentlyPlaced=/Game/Lazy_Saloon/Audio/Music/Rainy_Night_Montague_Cue.Rainy_Night_Montague_Cue;
 RecentlyPlaced=/Game/Lazy_Saloon/Audio/Environment/Outside_Ambient_Cue.Outside_Ambient_Cue;
 RecentlyPlaced=/Game/Lazy_Saloon/Audio/Music/Background_Music.Background_Music;
@@ -1269,10 +1313,6 @@ RecentlyPlaced=/Game/Lazy_Saloon/Models/Misc/Stetson.Stetson;
 RecentlyPlaced=/Game/Lazy_Saloon/Models/Misc/KeepOut.KeepOut;
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Hyeenu_Bust.Hyeenu_Bust;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Mug.Mug;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Divider.Divider;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Mugs02.Mugs02;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Mugs03.Mugs03;
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -2179,6 +2219,12 @@ HierarchicalLODUtilities.TimeStamp=2020.03.04-23.15.26
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2020.03.04-23.15.33
 TextureEditor.LastCompileMethod=Unknown
+NullDrv.TimeStamp=2020.03.04-23.15.30
+NullDrv.LastCompileMethod=Unknown
+BlueprintNativeCodeGen.TimeStamp=2020.03.04-23.15.20
+BlueprintNativeCodeGen.LastCompileMethod=Unknown
+BlueprintCompilerCppBackend.TimeStamp=2020.03.04-23.15.20
+BlueprintCompilerCppBackend.LastCompileMethod=Unknown
 
 [SuppressableDialogs]
 Warning_CompileErrorsInMaterial=False
@@ -2187,6 +2233,7 @@ Warning_CompileErrorsInMaterial=False
 StaticMeshActor.Materials=True
 StaticMeshActor.StaticMesh=True
 StaticMesh.Collision=True
+MatineeActor.MatineeActor=False
 
 [FoliageEdit]
 Radius=836.184082
