--- a/Western/Lazy Saloon/Saved/Config/Windows/Game.ini
+++ b/Western/Lazy Saloon/Saved/Config/Windows/Game.ini
@@ -4,7 +4,7 @@ bAddPacks=False
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildTarget=
-StagingDirectory=(Path="E:/HCC/Assignments/Level Design - Git/Western/Western Build")
+StagingDirectory=(Path="E:/HCC/Assignments/Level Design/Western")
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
